# Rust-csv-sqlite-test

./: .fuse_hidden0000a9c800000086  .gitignore  .~lock.out.csv#  26 Sep - 20 Okt 22.csv  Cargo.toml  README.md  out.csv
.github/workflows/: test.yml
query/: init.sql
src/: csv_in.rs  csv_out.rs  html_in.rs  main.rs  sql_init.rs
